# entari-plugin-user

./: .editorconfig  .gitignore  README.md  pyproject.toml
.github/actions/setup-python/: action.yml
.github/workflows/: pyright.yml  release.yml  ruff.yml
src/entari_plugin_user/: README.md  __init__.py  annotated.py  config.py  depends.py  filters.py  models.py  utils.py
src/entari_plugin_user/i18n/: .config.json  .lang.schema.json  .template.json  model.py  zh-CN.yaml
src/entari_plugin_user/matchers/: __init__.py  authorize.py  bind.py  user.py  utils.py
